tests/errors/variable_type_annotation_mismatch.dang
# Test variable type annotation mismatch
pub x: Int! = "hello"
